# automatic-ripping-machine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  docker-compose.gpu.yml  docker-compose.yml  docker-compose.yml.example  install.sh  pyproject.toml
.claude/: settings.json
services/backend/: .dockerignore  Dockerfile  pyproject.toml
services/backend/arm_backend/: auto_session.py  config.py  crash_recovery.py  gpu_probe.py  iso_ingress.py  jwt_utils.py  main.py  makemkv_status.py  notification_dispatcher.py  notification_format.py  path_template.py  seeders.py  transcode_apply.py  transcode_dispatcher.py
services/backend/arm_backend/metadata/: __init__.py  arm_server.py  base.py  dispatcher.py  musicbrainz.py  omdb.py  tmdb.py  tvdb.py
services/backend/arm_backend/notifications/: apprise_listener.py  catalog.py  field_map.py  inbox_listener.py  message.py  url_composer.py
services/backend/migrations/: env.py
services/backend/tests/: test_auth_router.py  test_auto_session_full.py  test_config_apprise_validation.py  test_config_metadata_provider.py  test_config_ripping_paused.py  test_config_secret_masking.py  test_config_tvdb_key.py  test_crash_recovery.py  test_dispatcher.py  test_dispatcher_full.py  test_drives_ops.py  test_drives_router.py  test_fk_ondelete.py  test_gpu_probe.py  test_gpu_probe_full.py  test_iso_ingress.py  test_iso_router.py  test_jobs_delete.py  test_jobs_rip_progress.py  test_jobs_router.py  test_jwt_split.py  test_logging.py  test_logs_router.py  test_main_unit.py  test_makemkv_key_status_endpoint.py  test_makemkv_key_status_model.py  test_makemkv_status_helper.py  test_makemkv_test_key.py  test_manual_trigger_media_check.py  test_message_dispatcher.py  test_metadata_clients.py  test_metadata_clients_full.py  test_metadata_search_router.py  test_metadata_testkey_router.py  test_naming_router.py  test_notification_dispatcher.py  test_notification_dispatcher_channels.py  test_notification_dispatcher_full.py  test_notification_format.py  test_notification_inbox_model.py  (+36 more)
services/transcode/: Dockerfile  README.md  pyproject.toml
services/transcode/arm_transcode/: atomic.py  config.py  ffmpeg_audio.py  handbrake.py  main.py  passthrough.py
services/transcode/tests/: test_atomic.py  test_ffmpeg_audio.py  test_handbrake.py  test_handbrake_hw.py  test_main.py  test_passthrough.py
v3/services/ripper/: Dockerfile  pyproject.toml
(+402 files in other folders)
