[project]
name = "arm_backend"
version = "0.0.0"
description = "ARM v3 Backend — FastAPI + Postgres + state machine"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "docker>=7.1",
    "apprise>=1.9",
    "arm_common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arm_backend"]

[tool.hatch.build.targets.wheel.force-include]
"arm_backend/py.typed" = "arm_backend/py.typed"

[tool.uv.sources]
arm_common = { workspace = true }
