[project]
name = "arm_transcode"
version = "0.0.0"
description = "ARM v3 Transcoder — ephemeral container per transcode_task"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "arm_common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arm_transcode"]

[tool.hatch.build.targets.wheel.force-include]
"arm_transcode/py.typed" = "arm_transcode/py.typed"

[tool.uv.sources]
arm_common = { workspace = true }
