[project]
name = "arm_ripper"
version = "0.0.0"
description = "ARM v3 Ripper — one container per optical drive"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "arm_common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arm_ripper"]

[tool.uv.sources]
arm_common = { workspace = true }
